# aula4-op-51

./: CMakeLists.txt  main.c  readme.md
01-bubblesort/: bubblesort.c  bubblesort.h
02-selectionsort/: selectionsort.c  selectionsort.h
03-insertsort/: insertionsort.c  insertionsort.h
04-CocktailShakerSort/: shakersort.c  shakersort.h
